objects/Contract_Request__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Request</relationshipLabel>
    <relationshipName>Contract_Request</relationshipName>
    <type>Lookup</type>
</CustomField>