objects/Contract_Request__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <label>Contract Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>