objects/Contract_Request__c/fields/Contract_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request_Reason__c</fullName>
    <label>Contract Request Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Instructions</fullName>
            </value>
            <value>
                <fullName>Contract Extension</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Documentation Only</fullName>
            </value>
            <value>
                <fullName>Emergency Service Agreement</fullName>
            </value>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>