objects/Contract_Request__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>HHW</fullName>
            </value>
            <value>
                <fullName>Industrial Maintenance</fullName>
            </value>
            <value>
                <fullName>Lab Pack</fullName>
            </value>
            <value>
                <fullName>MSA - without pricing</fullName>
            </value>
            <value>
                <fullName>MSA with Pricing</fullName>
            </value>
            <value>
                <fullName>Pricing Agreement</fullName>
            </value>
            <value>
                <fullName>Project Specific Agreement</fullName>
            </value>
            <value>
                <fullName>T&amp;D</fullName>
            </value>
            <value>
                <fullName>Virus Decon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>