objects/Contract_Request__c/fields/ContractRequestAutonumber__c.field-meta.xml
<CustomField>
    <fullName>ContractRequestAutonumber__c</fullName>
    <displayFormat>CR-{0000}</displayFormat>
    <label>ContractRequestAutonumber</label>
    <type>AutoNumber</type>
</CustomField>