objects/Contract_Request__c/fields/Customer_Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract_No__c</fullName>
    <label>Customer Contract No.</label>
    <length>250</length>
    <type>Text</type>
</CustomField>