objects/Contract_Request__c/fields/Non_Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Terms__c</fullName>
    <label>Non-Standard Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diverse Spend Reporting Required</fullName>
            </value>
            <value>
                <fullName>Liquidated Damages</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Indemnity</fullName>
            </value>
            <value>
                <fullName>EEOC Reporting</fullName>
            </value>
            <value>
                <fullName>Legal Document Retainage (Years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>