objects/Contract_Request__c/fields/Renewal_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Request</relationshipName>
    <type>Lookup</type>
</CustomField>