objects/Contract_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved - Added to Existing Contract</fullName>
            </value>
            <value>
                <fullName>Approved for Entry</fullName>
            </value>
            <value>
                <fullName>Closed - Documentation Only</fullName>
            </value>
            <value>
                <fullName>Closed - No Action</fullName>
            </value>
            <value>
                <fullName>Closed – Required Details Never Submitted</fullName>
            </value>
            <value>
                <fullName>Entry Completed</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Entry Approval</label>
            </value>
            <value>
                <fullName>Pending – Missing Documents</fullName>
            </value>
            <value>
                <fullName>Pending – Potential Duplicate</fullName>
            </value>
            <value>
                <fullName>Pending Waste Coding</fullName>
            </value>
            <value>
                <fullName>Pending Legal Review</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>