objects/Contract_Request__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Subsidiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-REPUBLIC SERVICES</fullName>
                <default>true</default>
                <label>1-REPUBLIC SERVICES</label>
            </value>
            <value>
                <fullName>5-RS-ES Gulf Coast</fullName>
            </value>
            <value>
                <fullName>1-ACV ENVIRO</fullName>
                <isActive>false</isActive>
                <label>1-ACV ENVIRO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>