objects/Contract_Request__c/validationRules/Cannot_Edit_CR_with_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_CR_with_Status</fullName>
    <active>false</active>
    <description>Users cannot edit CR with the status of Closed.</description>
    <errorConditionFormula>AND(
  $User.Contract_Manager__c = false,
 OR(
 ISPICKVAL( Status__c , "Closed - Documentation Only"),
 ISPICKVAL(Status__c, "Closed - No Action"),
ISPICKVAL(Status__c, "Closed – Required Details Never Submitted")
) 
)</errorConditionFormula>
    <errorMessage>You do not have sufficient privileges to edit Contact Request Form.</errorMessage>
</ValidationRule>